[package]
name = "picolms"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0", features = ["rt"] }
poem = { version = "3", features = ["anyhow", "rustls"] }
reqwest = { version = "0", features = ["stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
anyhow = "1"
thiserror = "1"
futures = "0"
lzzzz = "1"
tracing = "0"
tracing-subscriber = "0"
ordered-float = { version = "4", features = ["serde"] }
time = { version = "0", features = ["serde-human-readable", "local-offset"] }
unicase = "2"
regex = "1"
like = "0"
ipnet = { version = "2", features = ["serde"] }
arrow = "52"
parquet = "52"
picoplugin = { git = "https://git.picodata.io/picodata/picodata/picodata", branch = "master" }
# picoplugin = { path = "../picodata/picoplugin" }

[dev-dependencies]
criterion = { version = "0" }

[lib]
crate-type = ["dylib"]
